usually we were fetching prestashop products in wordpress on front via JS with SWR; for this project let's add possibility to request prestashop api on backend via php curl as well

--- a/views/index.twig
+++ b/views/index.twig
@@ -1,7 +1,16 @@
 {% extends "layout/base.twig" %}
 
 {% block body %}
-   
-    <h1>hello from twig</h1>
+
+	<h1>hello from twig</h1>
+
+
+	{% for product in new_products.products %}
+
+		<li>
+			<a href="{{product.link}}">{{product.name}}</a>
+		</li>
+
+	{% endfor %}
 
 {% endblock %}
