added js logic for fetching and rendering data from store on client side - this will ensure that store data is always up to date even if wordpress cache will be enabled; based on react 19 and swr 2

--- a/views/index.twig
+++ b/views/index.twig
@@ -5,6 +5,9 @@
 	<h1>hello from twig</h1>
 
 
+	<div class="shop-category" data-category-id="12"></div>
+
+
 	{% for product in new_products.products %}
 
 		<li>
