--- a/_dev/_scss/base/_typography.scss
+++ b/_dev/_scss/base/_typography.scss
@@ -4,8 +4,7 @@ h1,
 h2,
 h3,
 h4 {
-    
-    font-family: 'Inter', sans-serif;
+    font-family: "SL", sans-serif;
     font-weight: 600; //semi-bold
     color: variables.$black;
 
@@ -16,7 +15,6 @@ h4 {
 
 h1 {
     font-size: 3.5em;
-    max-width: 66rem;
 
     @media (max-width: variables.$breakpoint_mobile) {
         font-size: 3em;
