--- a/_dev/_scss/base/_viewport.scss
+++ b/_dev/_scss/base/_viewport.scss
@@ -8,7 +8,7 @@
     margin: 0 auto;
 
     padding-left: variables.$viewport-padding;
-    padding-right: variables.$viewport-padding;	
+    padding-right: variables.$viewport-padding;
 
     &.viewport--article {
         max-width: 960px;
@@ -25,6 +25,9 @@
         max-width: 1280px;
     }
     &.viewport--laptop {
+        max-width: 1366px;
+    }
+    &.viewport--laptop-big {
         max-width: 1440px;
     }
 
@@ -33,8 +36,7 @@
     }
 
     @media all and (max-width: variables.$breakpoint_mobile) {
-        padding-left: .5rem;
-        padding-right: .5rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
     }
-
 }
