--- a/_dev/_scss/utilities/_mixins.scss
+++ b/_dev/_scss/utilities/_mixins.scss
@@ -1,53 +1,23 @@
-// CSS triangle for nav.scss component
-@mixin submenu-indicator($size, $color) {
-    content: '';
+@mixin dropdown-indicator($size, $color) {
+    content: "";
     display: block;
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: $size solid transparent;
     border-right: $size solid transparent;
-    border-top: $size solid $color;	
-    transition: all .2s ease-in-out;		
+    border-top: $size solid $color;
+    transition: all 0.2s ease-in-out;
     position: relative;
-    margin-left: .5rem;
 }
 
 @mixin image-overlay() {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background:rgba(22, 22, 22, .05);
+    background: rgba(0, 0, 0, 0.05);
     z-index: 10;
-}
-
-@mixin sticky($offset) {
-    position: -webkit-sticky; //https://developer.mozilla.org/en-US/docs/Web/CSS/position
-    position: sticky;
-    top: $offset;
-}
-
-@mixin triangle-right($size, $color) {
-    content: '';
-    display: inline-block;
-    width: 0; 
-    height: 0; 
-    border-top: $size solid transparent;
-    border-bottom: $size solid transparent;
-    border-left: $size solid $color;  
-    position: relative;
-}
-
-@mixin dot($size, $color) {
-    content: '';
-    display: block;
-    width: $size;
-    height: $size;
-    border-radius: 50%;
-    background: $color;
-    margin-right: 1rem;
-    flex-shrink: 0;
 }
