--- a/_dev/_scss/utilities/_variables.scss
+++ b/_dev/_scss/utilities/_variables.scss
@@ -9,7 +9,11 @@ $fontsPath: "//kotyl.blog.dev.test/wp-content/themes/kotyl/assets/fonts/";
 
 //colors
 $black: #272727;
-$silver: #f0f0f0;
+$silver: #f2f2f2;
+$gold: #ccb297;
+$red: #d02c09;
+$pink: #dbc7c0;
+$green: #454b2b;
 
 $text_silver: #777f85;
 $text_silver_light: #c8c8c8;
