--- a/_dev/_scss/components/nav/_nav-top.scss
+++ b/_dev/_scss/components/nav/_nav-top.scss
@@ -1,7 +1,8 @@
+/** Top Navigation embedded in views/layout/header; markup generated via wp_nav **/
+
 @use "../../utilities/variables";
 @use "../../utilities/mixins";
 
-//markup components/nav/nav-top-menu.tpl
 .nav--top-menu {
     .nav__ui {
         position: absolute;
@@ -24,7 +25,31 @@
         }
 
         svg {
-            
+            fill: variables.$black;
+        }
+
+        a {
+            display: flex;
+            justify-content: center;
+            padding: 0;
+        }
+        .logo__title {
+            display: none;
+        }
+    }
+
+    .item--store {
+        .label {
+            &.label--full {
+                @media (max-width: variables.$breakpoint_desktop) and (min-width: variables.$breakpoint_mobile + 1px) {
+                    display: none;
+                }
+            }
+            &.label--short {
+                @media (min-width: variables.$breakpoint_desktop + 1px), (max-width: variables.$breakpoint_mobile) {
+                    display: none;
+                }
+            }
         }
     }
 
@@ -39,10 +64,9 @@
 
                 > a {
                     display: block;
-                    color: #fff;
-                    font-size: 0.875em;
-                    font-weight: 600;
-                    text-transform: uppercase;
+                    font-family: "Jost", sans-serif;
+                    font-weight: 500;
+                    font-size: 1.25em;
                 }
 
                 &.menu--open {
@@ -62,6 +86,17 @@
                 }
                 &.item--mobile {
                     display: none;
+                }
+                &.item--store {
+                    a {
+                        background: variables.$black;
+                        color: #fff;
+                        font-size: 1em;
+                        font-weight: 500;
+                        text-transform: uppercase;
+                        padding: 0.5rem 1rem;
+                        letter-spacing: 0.05em;
+                    }
                 }
             }
             @media (max-width: variables.$breakpoint_hd) {
@@ -132,7 +167,7 @@
     }
 
     @media (max-width: variables.$breakpoint_mobile) {
-        background: #fff;
+        background: variables.$green;
         position: fixed;
         z-index: 999;
         width: 80%;
@@ -146,11 +181,18 @@
         //extra space for nav__ui
         padding-top: 2.5rem;
 
+        .nav__logo {
+            svg {
+                fill: variables.$gold;
+            }
+        }
+
         a {
             display: block;
             font-size: 1.125em;
             font-weight: 400;
             padding: 1rem 0;
+            color: #fff;
         }
 
         > .menu {
@@ -161,7 +203,7 @@
         ul {
             li {
                 &:not(:last-child):not(.item--last) {
-                    border-bottom: 1px solid #d2d2d2;
+                    border-bottom: 1px solid #555847;
                 }
             }
         }
@@ -200,7 +242,7 @@
             overflow: auto;
             transition: transform 0.3s;
             padding: 0 1rem 3.5rem; //offset for top
-            background: #fff;
+            background: variables.$green;
         }
 
         .item__submenu {
@@ -210,6 +252,7 @@
             h3 {
                 font-size: 2em;
                 margin-bottom: 0.5rem;
+                color: #fff;
             }
             a {
                 font-size: 0.875em;
@@ -246,10 +289,13 @@
             }
         }
 
-        .block-socialmedia {
+        .block-social {
             justify-content: center;
             .svg__ico {
-
+                fill: variables.$gold;
+            }
+            li {
+                border: 0 !important;
             }
         }
     }
