--- a/views/layout/header.twig
+++ b/views/layout/header.twig
@@ -1,28 +1,25 @@
 <header id="header-top" class="header-top">
 
-    <div class="header__layout">
+	<div class="header__layout">
 
-        <div class="header__branding">
-            <div class="header__logo logo">
-                <a href="{{ site.url }}" title="{{ site.description }}">
-                    <figure>
-                        {{ source('assets/svg/logo.svg', ignore_missing = true) }}
-                    </figure>  
-                </a>           
-            </div> 
+		<section class="header__section section--branding">
 
-            {% include "blocks/block-social.twig" with { 'class' : 'block--header' } %}
+			<a class="ui-nav do-toggle-nav" href="#" role="button">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</a>
 
-            <a class="ui-nav do-toggle-nav" href="#" role="button">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>                
-        </div>
-        
-        {% include 'components/nav.twig' with { 'slug' : 'header', 'class' : 'header__nav nav--top' } %}
-        
-    </div>
+			{% include "components/logo.twig" with { 'cssClass' : 'header__logo' } %}
+
+			{% include "blocks/block-social.twig" with { 'cssClass' : 'block--header' } %}
+		</section>
+
+		<section class="header__section section--nav">
+			{% include "components/nav/nav-top-menu.twig" with { 'nav' : nav } %}
+		</section>
+
+	</div>
 
 </header>
