--- a/_dev/_scss/blocks/_block-social.scss
+++ b/_dev/_scss/blocks/_block-social.scss
@@ -39,4 +39,12 @@
             display: none;
         }
     }
+
+    &.block--footer {
+        .ui-ico {
+            .svg__ico {
+                fill: variables.$gold;
+            }
+        }
+    }
 }
