--- a/views/components/logo.twig
+++ b/views/components/logo.twig
@@ -1,5 +1,5 @@
 <figure class="{% if cssClass %}{{cssClass}} {% endif %}logo">
-	<a href="{{ site.url }}" title="{{ site.description }}">
+	<a href="{{ links.store }}" title="{{ site.description }}">
 		{{ source('assets/svg/logo.svg', ignore_missing = false) }}
 	</a>
 </figure>
