--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -1,42 +1,42 @@
 //Notice: for now everything useed here will be inlined in <head>
 //@todo: "tree shaking", i.e. move page-specific partials to external files and load them either via twig templates with <link> or via wp_enqueue_style
 
-@use 'base/reset';
+@use "base/reset";
 
-@use 'utilities/variables';
-@use 'utilities/reusables';
-@use 'utilities/mixins';
+@use "utilities/variables";
+@use "utilities/reusables";
+@use "utilities/mixins";
 
-@use 'base/fonts';
-@use 'base/generic';
-@use 'base/form';
-@use 'base/viewport';
-@use 'base/text';
-@use 'base/typography';
-@use 'base/ui';
+@use "base/fonts";
+@use "base/generic";
+@use "base/form";
+@use "base/viewport";
+@use "base/text";
+@use "base/typography";
+@use "base/ui";
 
-@use 'layout/grid';
-@use 'layout/layout';
-@use 'layout/header';
-@use 'layout/content';
-@use 'layout/footer';
+@use "layout/grid";
+@use "layout/layout";
+@use "layout/header";
+@use "layout/content";
+@use "layout/footer";
 
-@use 'blocks/block-social';
+@use "blocks/block-social";
 
-@use 'components/banner';
-@use 'components/button';
-@use 'components/breadcrumbs';
-@use 'components/pagination';
-@use 'components/cover';
-@use 'components/nav/nav-top';
-@use 'components/tabs';
+@use "components/banner";
+@use "components/button";
+@use "components/breadcrumbs";
+@use "components/pagination";
+@use "components/cover";
+@use "components/nav/nav-top";
+@use "components/tabs";
 
-@use 'partials/listing/post';
+@use "content/section-seo";
 
-@use 'partials/post/posts-list';
-@use 'partials/post/posts-grid';
+@use "partials/listing/post";
 
-//@use 'content/section/section-articles';
+@use "partials/post/posts-list";
+@use "partials/post/posts-grid";
 
 //include pages in bundle or load as separate files via wp_enqueue_style?
 //@use 'pages/post';
