--- a/_dev/_scss/layout/_content.scss
+++ b/_dev/_scss/layout/_content.scss
@@ -1,25 +1,34 @@
 @use "../utilities/variables";
 
 .content__main {
-
 }
 
 .content__title {
-
 }
-
 
 .content__section {
- 
+    margin: 4rem 0;
+
+    .section__logo {
+        margin-bottom: 2rem;
+        svg {
+            height: 1.5rem;
+        }
+    }
+
+    .section__header {
+        max-width: 45rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .section__cta {
+        margin: 2rem 0;
+        text-align: center;
+    }
 }
-
-.section__header {
-
-}
-
 
 .section__body {
     position: relative;
     z-index: 2; //above cover
 }
-
