--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -31,6 +31,7 @@
 @use "components/nav/nav-top";
 @use "components/tabs";
 
+@use "content/section-instagram";
 @use "content/section-seo";
 
 @use "partials/listing/post";
