--- a/views/layout/footer.twig
+++ b/views/layout/footer.twig
@@ -1,8 +1,9 @@
+{% include 'content/section-instagram.twig' %}
+
 <footer>
 	<div class="viewport viewport--laptop">
 
 		<section class="footer__section section--branding">
-
 
 			{% include "components/logo.twig" with { 'cssClass' : 'footer__logo' } %}
 
