item post progress

--- a/_dev/_scss/components/nav/_nav-top.scss
+++ b/_dev/_scss/components/nav/_nav-top.scss
@@ -10,7 +10,7 @@
         right: 0.75rem;
         z-index: 10;
         padding: 0;
-        font-size: unset;
+        color: #6c7251;
     }
 
     .nav__logo {
