--- a/_dev/_scss/partials/listing/_post.scss
+++ b/_dev/_scss/partials/listing/_post.scss
@@ -1,8 +1,57 @@
+@use "../../utilities/variables";
+
 .item--post {
+    .post__cover {
+        display: block;
+        margin-bottom: 1rem;
+        overflow: hidden;
+        figure {
+            height: inherit;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.2s;
+        }
+    }
+
+    .post__title {
+        font-family: "AG", sans-serif;
+        font-size: 1.5em;
+        margin-bottom: 1rem;
+
+        @media (max-width: variables.$breakpoint_mobile) {
+            font-size: 1.375em;
+        }
+    }
+
+    p {
+        font-size: 1em;
+        line-height: 1.75;
+    }
+
+    .post__cta {
+        display: none;
+    }
+
+    @media (hover: hover) {
+        &:hover {
+            .post__cover {
+                img {
+                    transform: scale(1.05);
+                }
+            }
+        }
+    }
 }
 
 .posts__grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
+
+    @media (max-width: variables.$breakpoint_mobile) {
+        grid-template-columns: 1fr;
+    }
 }
