--- a/views/partials/post/item.twig
+++ b/views/partials/post/item.twig
@@ -17,6 +17,6 @@
 			<a href="{{post.link}}">{{ post.title }}</a>
 		</h2>
 		<p>{{ post.post_excerpt }}</p>
-		<a href="{{post.link}}" class="post__cta button button--transparent">{{ __('Czytaj dalej', 'theme') }}</a>
+		<a href="{{post.link}}" class="post__cta button button--silent">{{ __('Czytaj dalej', 'theme') }}</a>
 	</div>
 </li></a></li>
