--- a/_dev/_scss/base/_ui.scss
+++ b/_dev/_scss/base/_ui.scss
@@ -108,5 +108,10 @@
             width: 2rem;
             height: 2rem;
         }
+
+        font-size: 0.75em;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.05rem;
     }
 }
