--- a/_dev/_scss/components/_button.scss
+++ b/_dev/_scss/components/_button.scss
@@ -24,6 +24,25 @@
 
     border-radius: 2rem;
 
+    &.button--silent {
+        background: transparent;
+        color: #000;
+        display: inline-block;
+        width: auto;
+        height: auto;
+        border-radius: 0;
+        padding: 0;
+        font-weight: 600;
+        font-size: 1em;
+
+        @media (hover: hover) {
+            &:hover {
+                background: transparent;
+                text-decoration: underline;
+            }
+        }
+    }
+
     @media (hover: hover) {
         &:hover {
             background: #272727;
