--- a/_dev/_scss/partials/listing/_tag.scss
+++ b/_dev/_scss/partials/listing/_tag.scss
@@ -1,3 +1,27 @@
+@use "../../utilities/variables";
+
+.tags__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    width: 100%;
+    margin: 1rem 0;
+}
+
 .item--tag {
-    
+    a {
+        display: block;
+        font-size: 0.875em;
+        font-weight: 400;
+        padding: 0.375rem 1rem;
+        border-radius: 1.5rem;
+        background: #ebe7e7;
+        text-decoration: none;
+
+        @media (hover: hover) {
+            &:hover {
+                background: #d4d3d3;
+            }
+        }
+    }
 }
