--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -33,6 +33,7 @@
 
 @use "content/section-instagram";
 @use "content/section-seo";
+@use "content/section-tags";
 
 @use "partials/listing/post";
 @use "partials/listing/tag";
