--- a/views/index.twig
+++ b/views/index.twig
@@ -8,6 +8,8 @@
 		</div>
 	</section>
 
+	{% include 'content/section-tags.twig' %}
+
 	<section class="content__section section-newest-posts">
 		<div class="viewport viewport--laptop">
 
