--- a/_dev/_scss/global.scss
+++ b/_dev/_scss/global.scss
@@ -34,6 +34,7 @@
 @use "content/section-instagram";
 @use "content/section-seo";
 @use "content/section-tags";
+@use "content/section-features";
 
 @use "partials/listing/post";
 @use "partials/listing/tag";
