--- a/views/index.twig
+++ b/views/index.twig
@@ -25,6 +25,8 @@
 		<!-- /viewport -->
 	</section>
 
+	{% include 'content/section-features.twig' %}
+
 
 	{# <div class="shop-category" data-category-id="12"></div> #}
 
