scaffolded archive, category and tag listings

--- a/_dev/_scss/content/_section-features.scss
+++ b/_dev/_scss/content/_section-features.scss
@@ -58,6 +58,7 @@
         }
         @media (max-width: variables.$breakpoint_phone_big) {
             grid-template-columns: 1fr;
+            gap: 2rem;
         }
     }
 }
