--- a/views/pages/category.twig
+++ b/views/pages/category.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-	<main class="content__main content--tag">
+	<main class="content__main content--category">
 
 		{% include "components/breadcrumbs.twig" %}
 
