--- a/views/index.twig
+++ b/views/index.twig
@@ -25,6 +25,8 @@
 		<!-- /viewport -->
 	</section>
 
+	{% include 'content/section-new-products.twig' %}
+
 	{% include 'content/section-features.twig' %}
 
 
